test/e2e/testdata/policy-status-cleanup-multiple-ancestors-multiple-gwcs.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: backendtrafficpolicy-multiple-ancestors-same-gwc
  namespace: gateway-conformance-infra
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: same-namespace
  # This gateway (and its gatewayclass) is created through `status-cleanup-gateway-different-gwc.yaml` manifest.
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gateway-2
